NetBSD Problem Report #22331
Received: (qmail 23993 invoked by uid 605); 1 Aug 2003 11:52:09 -0000
Message-Id: <20030801115204.C177A3663@yoda.cubidou.net>
Date: Fri, 1 Aug 2003 13:52:04 +0200
From: "Quentin Garnier" <cube@cubidou.net>
Sender: gnats-bugs-owner@NetBSD.org
Reply-To: cube@cubidou.net
To: gnats-bugs@gnats.netbsd.org
Subject: Redefinition in sys/dev/pcidevs
X-Send-Pr-Version: 3.95
>Number: 22331
>Category: kern
>Synopsis: Redefinition in sys/dev/pcidevs
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: kern-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Fri Aug 01 11:53:00 +0000 2003
>Closed-Date: Fri Aug 01 11:55:54 +0000 2003
>Last-Modified: Thu Aug 07 00:29:00 +0000 2003
>Originator: Quentin Garnier
>Release: NetBSD 1.6U
>Organization:
Quentin Garnier - cube@cubidou.net
"Feels like I'm fiddling while Rome is burning down.
Should I lay my fiddle down and take a rifle from the ground ?"
Leigh Nash/Sixpence None The Richer, Paralyzed, Divine Discontents, 2002.
>Environment:
System: NetBSD padme 1.6U NetBSD 1.6U (PADME) #3: Thu Jul 17 19:55:12 CEST 2003 cube@padme:/mnt/src/current/src/sys/arch/i386/compile/NVIDIA i386
Architecture: i386
Machine: i386
>Description:
A value is duplicated in sys/dev/pcidevs for some ATI cards.
>How-To-Repeat:
Compile libpci (I think) and look for a warning about a duplicated value:
/mnt/src/beru/dest/usr/include/dev/pci/pcidevs.h:969: warning: `PCI_PRODUCT_ATI_RADEON_9100' redefined
/mnt/src/beru/dest/usr/include/dev/pci/pcidevs.h:966: warning: this is the location of the previous definition
>Fix:
It appears to be a pasto. There is indeed a secondary Radeon 9100
product ID, thus the number changes too.
Index: pcidevs
===================================================================
RCS file: /cvsroot/src/sys/dev/pci/pcidevs,v
retrieving revision 1.559
diff -u -r1.559 pcidevs
--- pcidevs 2003/07/29 19:46:56 1.559
+++ pcidevs 2003/08/01 11:45:38
@@ -959,7 +959,7 @@
product ATI RADEON_9100 0x514d Radeon 9100 Series
product ATI RADEON_7500 0x5157 Radeon 7500
product ATI RADEON_7000 0x5159 Radeon 7000/VE
-product ATI RADEON_9100 0x514d Radeon 9100 Series Secondary
+product ATI RADEON_9100_S 0x516d Radeon 9100 Series Secondary
product ATI RAGEGLPCI 0x5245 Rage 128 GL PCI
product ATI RAGEGLAGP 0x5246 Rage 128 GL AGP 2x
product ATI RAGEVRPCI 0x524b Rage 128 VR PCI
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: wiz
State-Changed-When: Fri Aug 1 11:55:49 UTC 2003
State-Changed-Why:
Fixed, thanks.
From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: pr/22331 CVS commit: src/sys/dev/pci
Date: Fri, 1 Aug 2003 11:55:04 +0000 (UTC)
Module Name: src
Committed By: wiz
Date: Fri Aug 1 11:55:03 UTC 2003
Modified Files:
src/sys/dev/pci: pcidevs
Log Message:
Avoid duplicate definitions. From Quentin Garnier in PR 22331.
To generate a diff of this commit:
cvs rdiff -r1.560 -r1.561 src/sys/dev/pci/pcidevs
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: pr/22331 CVS commit: src/sys/dev/pci
Date: Fri, 1 Aug 2003 11:55:44 +0000 (UTC)
Module Name: src
Committed By: wiz
Date: Fri Aug 1 11:55:44 UTC 2003
Modified Files:
src/sys/dev/pci: pcidevs.h pcidevs_data.h
Log Message:
regen (avoid duplicate definition, PR 22331)
To generate a diff of this commit:
cvs rdiff -r1.561 -r1.562 src/sys/dev/pci/pcidevs.h
cvs rdiff -r1.559 -r1.560 src/sys/dev/pci/pcidevs_data.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: cube <cube@cubidou.net>
To: gnats-bugs@gnats.netbsd.org
Cc: wiz@netbsd.org
Subject: Re: kern/22331
Date: Thu, 7 Aug 2003 02:28:02 +0200
Le 1 Aug 2003 11:55:54 -0000
wiz@netbsd.org a ecrit :
> Synopsis: Redefinition in sys/dev/pcidevs
>
> State-Changed-From-To: open->closed
> State-Changed-By: wiz
> State-Changed-When: Fri Aug 1 11:55:49 UTC 2003
> State-Changed-Why:
> Fixed, thanks.
Not quite :)
<<<<<<< pcidevs
product ATI RADEON_9100_S 0x516d Radeon 9100 Series Secondary
=======
product ATI RADEON_9100_S 0x514d Radeon 9100 Series Secondary
>>>>>>> 1.561
See how the number changes? (The correct value is 0x516d, that's how the
conflict appears.)
--
Quentin Garnier - cube@cubidou.net
"Feels like I'm fiddling while Rome is burning down.
Should I lay my fiddle down and take a rifle from the ground ?"
Leigh Nash/Sixpence None The Richer, Paralyzed, Divine Discontents, 2002.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.