regen (avoid duplicate definition, PR 22331)