sys/dev/pci/pcidevs.h
@@ -1,10 +1,10 @@
-/*	$NetBSD: pcidevs.h,v 1.561 2003/08/01 00:07:32 jonathan Exp $	*/
+/*	$NetBSD: pcidevs.h,v 1.562 2003/08/01 11:55:42 wiz Exp $	*/
 
 /*
  * THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
  *
  * generated from:
- *	NetBSD: pcidevs,v 1.560 2003/08/01 00:05:27 jonathan Exp 
+ *	NetBSD: pcidevs,v 1.561 2003/08/01 11:55:03 wiz Exp 
  */
 
 /*
@@ -966,7 +966,7 @@
 #define	PCI_PRODUCT_ATI_RADEON_9100	0x514d		/* Radeon 9100 Series */
 #define	PCI_PRODUCT_ATI_RADEON_7500	0x5157		/* Radeon 7500 */
 #define	PCI_PRODUCT_ATI_RADEON_7000	0x5159		/* Radeon 7000/VE */
-#define	PCI_PRODUCT_ATI_RADEON_9100	0x514d		/* Radeon 9100 Series Secondary */
+#define	PCI_PRODUCT_ATI_RADEON_9100_S	0x514d		/* Radeon 9100 Series Secondary */
 #define	PCI_PRODUCT_ATI_RAGEGLPCI	0x5245		/* Rage 128 GL PCI */
 #define	PCI_PRODUCT_ATI_RAGEGLAGP	0x5246		/* Rage 128 GL AGP 2x */
 #define	PCI_PRODUCT_ATI_RAGEVRPCI	0x524b		/* Rage 128 VR PCI */
